--- a/panda1.css
+++ b/panda1.css
@@ -7,7 +7,7 @@
 body    
     {
         background-color: rgb(255, 255, 255);
-        background-image: url(stairs1.jpg);
+        background-image: url(stair1.jpg);
         background-repeat: no-repeat;
         background-size: cover;
         background-position: -10px;
